# satysfi-matrix

./: Satyristes  satysfi-matrix-doc.opam  satysfi-matrix.opam
example/: main.saty
